--- a/src/styles/src/tabs.css
+++ b/src/styles/src/tabs.css
@@ -105,24 +105,25 @@
 }
 
 .settings-container {
-	width: 100%;
+	width: 90%;
 	height: 100%;
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
-	margin: 0 5% 5% 0;
+	/* justify-content: space-around; */
+	/* margin: 0 0 0 0; */
+	gap: 5%;
+	padding-bottom: 5%;
 }
 
 .setting-box {
 	flex: 1;
 	height: 70%;
-	width: 25%;
 	display: flex;
 	position: relative;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	margin-left: 5%;
+	/* margin-left: 5%; */
 }
 
 .svg-text {
